--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         const list = document.querySelectorAll('.list');
         function activeLink(){
             list.forEach((item) =>
+            item.classList.remove('hover'));
+            this.classList.add('hover');
         }
         list.forEach((item) =>
         item.addEventListener('click' , activeLink));
